--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,7 +5,7 @@ ion-content{
 }
 .icons{
     text-align: center;
-    margin-top:100px;
+    margin-top:50px;
     margin-bottom: 50px;
 }
 /*
@@ -47,10 +47,41 @@ ion-input{
     --group-background-focus: #678EFE;
 
 }
-
+.seperator{
+    height: 30px;
+}
+button {
+    background: RGBA(171,75,234,0.59)!important;
+    margin-top:30px!important;
+    width: 50%!important;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    width: 50%;
+    padding: 8px 16px;
+    line-height: 25px;
+    font-size: 14px;
+    font-weight: 500;
+    font-family: inherit;
+    border-radius: 6px;
+    -webkit-appearance: none;
+    color: var(--input-color);
+    margin-top: 30px;
+    border: 1px solid #ab4bea;
+    transition: border .3s ease;
+    &::placeholder {
+        color: var(--input-placeholder);
+    }
+    &:focus {
+        outline: none;
+        border-color: var(--input-border-focus);
+    }
+}
 .form-field {
     display: block;
-    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+    width: 70%;
     padding: 8px 16px;
     line-height: 25px;
     font-size: 14px;
@@ -147,4 +178,9 @@ body {
             margin-bottom: 32px;
         }
     }
+}
+.container{
+    height: 360px;
+    top: 58%;
+    position: relative;
 }
