hosting digital ocean

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
 <div class="login1" *ngIf="login1">
   
   <div class="form-group">
-    <input [(ngModel)]="phone_number" type="number" class="form-field" />
+    <input [(ngModel)]="phone_number" type="text" class="form-field" />
 
   </div>
 
